# MindTrack

./: .gitignore  README.md  pyproject.toml
healthcare_portal/: manage.py
healthcare_portal/healthcare_portal/: asgi.py  settings.py  urls.py  wsgi.py
healthcare_portal/portal/: admin.py  forms.py  models.py  urls.py  util.py  views.py
healthcare_portal/portal/migrations/: 0001_initial.py  0002_customuser_availability.py  0003_customuser_age.py  0004_appointment.py
healthcare_portal/portal/static/portal/: styles.css
healthcare_portal/templates/: base.html  doctor_dashboard.html  patient_after_submission.html  patient_view.html  register.html  thank_you.html
healthcare_portal/templates/registration/: login.html
